demo/manifests/5-traffic-splitting/weighted-splitting/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-weighted-routing
  namespace: nginx-demo
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["nginx-weighted.apps.example.com"]
  rules:
    - backendRefs:
        - name: nginx-hello-service
          port: 80
          weight: 90
        - name: nginx-bye-service
          port: 80
          weight: 10
